Fixing layout issues #13

--- a/less/layout.less
+++ b/less/layout.less
@@ -2,6 +2,13 @@ body {
   display: flex;
   flex-direction: column;
 }
+#settings {
+  flex: 0 0 auto;
+}
 #timeline {
-  flex-grow: 1;
+  flex: 1 0 0;
+  overflow-y: scroll;
+}
+#emitter {
+  flex: 0 0 auto;
 }
